@startuml
class Kandidat {
    String vorname
    String nachname
    char geschlecht
    Date geburtsdatum
    String beruf
}

class Bundesland {
    String name
    boolean osten
}

class Partei {
    String name
    int gruendungsjahr
    String farbe
}

class Bundestagswahl{
   int jahr
}

class Wahlkreisinformation {
    int anzahlMenschen
    int anzahlGemeinden
    int flaeche
    int altersDurchschnitt
}

class Landesliste {
}

class Listenplatz {
    int position
}

class Wahlkreis {
    int nummer
    String name
}

class ZweitstimmenErgebnis {
    int anzahl
}
class Stimme {
    boolean gueltig
    boolean briefwahl
}

class Zweitstimme extends Stimme {
}

class Erststimme extends Stimme {
}

class Direktkandidatur {
    int anzahlStimmen
}

Landesliste "*" -- "1" Bundesland : in >
Landesliste "*" -- "1" Partei : < reicht ein
Landesliste "*" -- "1" Bundestagswahl: zur >

Landesliste "1" *-- "1..*" Listenplatz : enthaelt >
Listenplatz "*" -- "1" Kandidat : enthaelt >

Wahlkreis "1..*" --* "1" Bundesland : besteht aus <

Wahlkreisinformation "*" --* "1" Wahlkreis : < hat
Wahlkreisinformation "299" -- "1" Bundestagswahl: gueltig fuer >

Direktkandidatur "*" -- "1" Kandidat : von >
Direktkandidatur "*" -- "1" Wahlkreis : < hat
Direktkandidatur "*" -- "0..1" Partei : von >
Direktkandidatur "*" -- "1" Bundestagswahl: zur >

Erststimme "*" -- "0..1" Direktkandidatur : für >
Zweitstimme "*" -- "0..1" Landesliste : für >
Stimme "*" -up- "1" Wahlkreis : stammt aus >
ZweitstimmenErgebnis "*" -- "1" Wahlkreis : stammt aus >
ZweitstimmenErgebnis "*" -- "1" Landesliste : für >
@enduml